tests/should_fail/unmatched_bracket.nds
-- Missing closing bracket in list literal.
set x to [1, 2, 3
